--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "scikit-learn>=1.0.0",
     "scipy>=1.7.0",
     "seaborn>=0.11.0",
+    "squid-nn>=0.4.8",
     "torch==2.5.1",
     "torchmetrics==0.11.4",
 ]
@@ -21,3 +22,7 @@ dependencies = [
 dev = [
     "notebook>=7.4.3",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["insilico_mpra*"] 
