--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "h5py==3.8.0",
-    "lightning==2.0.3",
     "matplotlib>=3.5.0",
     "numpy==1.25.0",
     "pandas==2.0.2",
+    "pytorch-lightning>=2.5.3",
     "scikit-learn>=1.0.0",
     "scipy>=1.7.0",
     "seaborn>=0.11.0",
@@ -21,6 +21,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "notebook>=7.4.3",
+    "tangermeme>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
