--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "h5py==3.8.0",
+    "lightning>=2.5.6",
     "matplotlib>=3.5.0",
     "numpy==1.25.0",
     "pandas==2.0.2",
-    "pytorch-lightning>=2.5.3",
     "scikit-learn>=1.0.0",
     "scipy>=1.7.0",
     "seaborn>=0.11.0",
@@ -26,4 +26,7 @@ dev = [
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["insilico_mpra*"] 
+include = ["insilico_mpra*"]
+
+[tool.ruff]
+line-length = 100
